--- a/points/backends.yaml
+++ b/points/backends.yaml
@@ -1,13 +1,13 @@
 backends:
 
-- name: points
-  start: points.py
+- name: harvest
+  start: harvest.py
   class: B2
   instances: 1
   options: dynamic
 
-- name: harvest
-  start: harvest.py
+- name: render
+  start: render.py
   class: B2
   instances: 1
   options: dynamic
@@ -16,4 +16,4 @@ backends:
   start: tile.py
   class: B2
   instances: 1
-  options: dynamic, public
+  options: public, dynamic
