Modified loader.py to use a simpler version of the "final plan" we're aiming for, and started work on cleaning up config.yaml to meet the new spec. Incomplete.

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -17,59 +17,30 @@ Collections:
 # 
 - DirectoryName: mammals
    
-  # Required MOL metadata (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-  #  
-  Required:
-    #collectionorigin:       6
-    #collectionpresence:     6
-    #collectionseasonality:  6
-    #collectionstartdate:    2010
-    contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
-    # contributor: John Wieczorek
-    # coverage:   global
-    # creator: IUCN 
-    # date:   2010
-    # description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Species. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
-    # email: redlist@iucn.org 
-    # publisher:  IUCN
-    # rights: Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en
-    # samplingprotocol:    expert opinion
-    # scientificname:     Mammalia
-    # source:             IUCN
-    #subject:            IUCN
-    taxonomiccoverage:  most
-    #title:              IUCN Red List of Threatened Species 
-    verbatimsrs:        +proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs
-
-  # Optional MoL metadata (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-  #
-  Optional:
-    #accessright:    
-    basemaps:    
-    #enddateaccuracy:    
-    #format:    ESRI Shapefile
-    #identifier:    
-    #language:   en
-    layertype:  range
-    #relation:    
-    #rights:    
-    #startdateaccuracy:    
-    surveyintervals:    
-    #type:
-
-  # Mappings between collection DBF fields and MoL DBF fields: (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-
-  DBFMapping:
+  Fields:
 
     # Required MoL DBF fields 
+    # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Required:
-      polygonid: Binomial
-      areaid: Binomial
-      bibliographiccitation: citation
-      scientificname: binomiaL
+      areaid: 1
+      bibliographiccitation: =CITATION
+        # Could also be something like: "IUCN 2011. IUCN Red List of Threatened Species. Version AAAA. <http://www.iucnredlist.org>. Downloaded on XX YYY ZZZZ."
+      collectionidentifier: "IUCN Red List version AAAA" 
+      contact: "IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom"
+        # Should really have an e-mail address in there somewhere.
+      creator: =COMPILER
+      format: "ESRI Shapefile"
+      layertype: "expert opinion range map"
+      polygonid: 1
+      pubdate: "2011"
+      rights: "Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
+      scientificname: =BINOMIAL
+      title: "IUCN Red List of Threatened Species"
+      verbatimsrs: "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs"
 
     # Optional MoL DBF fields
+    # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Optional:
       abundance:      
@@ -78,81 +49,54 @@ Collections:
       abundancemethod:      
       abundancesurveyarea:      
       abundanceunits:      
-      areaname:      
+      areaname: World
+      basemaps:  
       commonname:      
-      contributor:      COMPILER
-      dateend:      
-      datestart:      
+      coverage: Global
+      contributor: "IUCN"
+      description: |
+          This dataset contains distribution information of species assessed for 
+          The IUCN Red List of Threatened Species. The maps are developed as part 
+          of a comprehensive assessment of global in order to highlight taxa 
+          threatened with extinction, and thereby promote their conservation.
       distributioncomment:      
       dynamicproperties:      
-      establishmentmeans: ORIGIN 
-      infraspecificepithet: SUBSPECIES
-      measurementcomment:
-      measurementmethod:
+      establishmentmeans: =ORIGIN 
       nameaccordingto:  
-      occurrencestatus:  PRESENCE  
-      polygonid: 
-      polygonname:
-      population:      
-      seasonality:      SEASONAL
+      occurrencestatus: =PRESENCE  
+      polygonname: =ISLAND
+      seasonality: =SEASONAL
+      surveystartdate:
+      surveyenddate:
+      surveyintervals: 
       taxonid:      
       taxonremarks:
+      visible:
 
 - DirectoryName: amphibians
    
-  # Required MOL metadata (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-  #  
-  Required:
-    collectionorigin:       6
-    collectionpresence:     6
-    collectionseasonality:  6
-    collectionstartdate:    2010
-    contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
-    contributor:            John Wieczorek 
-    coverage:   global
-    creator: IUCN 
-    date:   2010
-    description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Species. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
-    email: redlist@iucn.org 
-    publisher:  IUCN
-    rights: Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en
-    samplingprotocol:    expert opinion
-    scientificname:     Mammalia
-    source:             IUCN
-    subject:            IUCN
-    taxonomiccoverage:  most
-    title:              IUCN Red List of Threatened Species 
-    verbatimsrs:        +proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs
-
-  # Optional MoL metadata (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-  #
-  Optional:
-    accessright:    
-    basemaps:    
-    enddateaccuracy:    
-    format:    ESRI Shapefile
-    identifier:    
-    language:   en
-    layertype:  range
-    relation:    
-    rights:    
-    startdateaccuracy:    
-    surveyintervals:    
-    type:
-
-  # Mappings between collection DBF fields and MoL DBF fields: (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
-
-  DBFMapping:
+  Fields:
 
     # Required MoL DBF fields 
+    # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Required:
       areaid: BINOMIAL 
+      contact: 'IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom'
       polygonid: BINOMIAL
       bibliographiccitation: CITATION
       scientificname: BINOMIAL
+      creator: binomial
+      format: binomial
+      layertype: binomial
+      pubdate: binomial
+      rights: binomial
+      title: binomial
+      verbatimsrs: "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs"
+      collectionidentifier: "IUCN red list amphibians 2010"
 
     # Optional MoL DBF fields
+    # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Optional:
       abundance:      
@@ -162,21 +106,21 @@ Collections:
       abundancesurveyarea:      
       abundanceunits:      
       areaname:      
+      basemaps:    
       commonname:      
       contributor:      COMPILER
-      dateend:      
-      datestart:      
       distributioncomment:      
       dynamicproperties:      
       establishmentmeans: ORIGIN 
-      infraspecificepithet: SUBSPECIES
-      measurementcomment:
-      measurementmethod:
+      # infraspecificepithet: SUBSPECIES
+      # measurementcomment:
+      # measurementmethod:
       nameaccordingto:  
       occurrencestatus:  PRESENCE  
-      polygonid:      
+      # polygonid:      
       polygonname:      
-      population:      
+      # population:      
       seasonality:      SEASONAL
+      surveyintervals:    
       taxonid:      
       taxonremarks:     TAX_COMMEN
