--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -24,15 +24,14 @@ Collections:
     #
     Required:
       areaid: 1
-      bibliographiccitation: =CITATION
-        # Could also be something like: "IUCN 2011. IUCN Red List of Threatened Species. Version AAAA. <http://www.iucnredlist.org>. Downloaded on XX YYY ZZZZ."
-      collectionidentifier: "IUCN Red List version AAAA" 
-      contact: "IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom"
-        # Should really have an e-mail address in there somewhere.
-      creator: =COMPILER
-      format: "ESRI Shapefile"
-      layertype: "expert opinion range map"
       polygonid: 1
+      identifier: =ID_NO
+      bibliographiccitation: "IUCN 2009. IUCN Red List of Threatened Species. Version 2009.1. http://www.iucnredlist.org"
+        # What about =CITATION?
+      collectionidentifier: "IUCN Red List version AAAA" 
+      contact: "Vineet Katariya <Vineet.Katariya@iucn.org>"
+      creator: =COMPILER
+      layertype: "expert opinion range map"
       pubdate: "2011"
       rights: "Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
       scientificname: =BINOMIAL
@@ -43,84 +42,65 @@ Collections:
     # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Optional:
-      abundance:      
-      abundancecomment:      
-      abundancemakeup:      
-      abundancemethod:      
-      abundancesurveyarea:      
-      abundanceunits:      
-      areaname: World
       basemaps:  
       commonname:      
       coverage: Global
-      contributor: "IUCN"
       description: |
           This dataset contains distribution information of species assessed for 
           The IUCN Red List of Threatened Species. The maps are developed as part 
           of a comprehensive assessment of global in order to highlight taxa 
           threatened with extinction, and thereby promote their conservation.
-      distributioncomment:      
-      dynamicproperties:      
+      distributioncomment: =DIST_COMM     
       establishmentmeans: =ORIGIN 
-      nameaccordingto:  
       occurrencestatus: =PRESENCE  
       polygonname: =ISLAND
       seasonality: =SEASONAL
-      surveystartdate:
-      surveyenddate:
-      surveyintervals: 
-      taxonid:      
-      taxonremarks:
-      visible:
+      surveystartdate: =YEAR
+      surveyenddate: =YEAR
+      taxonremarks: =TAX_COMMEN
+      visible: true
 
 - DirectoryName: amphibians
-   
+
   Fields:
 
     # Required MoL DBF fields 
     # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Required:
-      areaid: BINOMIAL 
-      contact: 'IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom'
-      polygonid: BINOMIAL
-      bibliographiccitation: CITATION
-      scientificname: BINOMIAL
-      creator: binomial
-      format: binomial
-      layertype: binomial
-      pubdate: binomial
-      rights: binomial
-      title: binomial
+      areaid: 1
+      polygonid: 1
+      identifier: =ID_NO
+      bibliographiccitation: "IUCN 2009. IUCN Red List of Threatened Species. Version 2009.1. http://www.iucnredlist.org"
+        # What about =CITATION?
+      collectionidentifier: "IUCN Red List version AAAA" 
+      contact: "Vineet Katariya <Vineet.Katariya@iucn.org>"
+      creator: =COMPILER
+      layertype: "expert opinion range map"
+      pubdate: "2011"
+      rights: "Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
+      scientificname: =BINOMIAL
+      title: "IUCN Red List of Threatened Species"
       verbatimsrs: "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs"
-      collectionidentifier: "IUCN red list amphibians 2010"
 
     # Optional MoL DBF fields
     # http://www.google.com/fusiontables/DataSource?dsrcid=1348212
     #
     Optional:
-      abundance:      
-      abundancecomment:      
-      abundancemakeup:      
-      abundancemethod:      
-      abundancesurveyarea:      
-      abundanceunits:      
-      areaname:      
-      basemaps:    
+      basemaps:  
       commonname:      
-      contributor:      COMPILER
-      distributioncomment:      
-      dynamicproperties:      
-      establishmentmeans: ORIGIN 
-      # infraspecificepithet: SUBSPECIES
-      # measurementcomment:
-      # measurementmethod:
-      nameaccordingto:  
-      occurrencestatus:  PRESENCE  
-      # polygonid:      
-      polygonname:      
-      # population:      
-      seasonality:      SEASONAL
-      surveyintervals:    
-      taxonid:      
-      taxonremarks:     TAX_COMMEN
+      coverage: Global
+      description: |
+          This dataset contains distribution information of species assessed for 
+          The IUCN Red List of Threatened Species. The maps are developed as part 
+          of a comprehensive assessment of global in order to highlight taxa 
+          threatened with extinction, and thereby promote their conservation.
+      distributioncomment: =DIST_COMM     
+      establishmentmeans: =ORIGIN 
+      occurrencestatus: =PRESENCE  
+      polygonname: =ISLAND
+      seasonality: =SEASONAL
+      surveystartdate: =YEAR
+      surveyenddate: =YEAR
+      taxonremarks: =TAX_COMMEN
+      visible: true
