Adding a few more Unicode characters for this dataset to chew through.

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -108,9 +108,9 @@ Collections:
     collectionseasonality:  6
     collectionstartdate:    2010
     contact: IUCN Red List Unit, IUCN UK Office, 219c Huntingdon Road, Cambridge CB3 0DL, United Kingdom
-    contributor:            John Wieczorek 
+    contributor:            John Wieczorek®
     coverage:   global
-    creator: IUCN 
+    creator: IUCN™ 
     date:   2010
     description: This dataset contains distribution information of species assessed for The IUCN Red List of Threatened Species. The maps are developed as part of a comprehensive assessment of global in order to highlight taxa threatened with extinction, and thereby promote their conservation.
     email: redlist@iucn.org 
