Used validation to set up blank optional fields, as required by downstream programs. This lets us finish working on iucn/config.yaml for now (issue #110).

--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -100,7 +100,7 @@ Collections:
       occurrencestatus: =PRESENCE  
       polygonname: =ISLAND
       seasonality: =SEASONAL
-      surveystartdate: =YEAR
-      surveyenddate: =YEAR
+      surveystartdate: =YEAR_
+      surveyenddate: =YEAR_
       taxonremarks: =TAX_COMMEN
       visible: true
