Added a fake 'abundance' column to abeillia_abeillei.dbf to test for DBF mapping.

--- a/workflow/mol-data/jetz/config.yaml
+++ b/workflow/mol-data/jetz/config.yaml
@@ -38,6 +38,7 @@ Collections:
     # Optional MoL metadata (http://www.google.com/fusiontables/DataSource?dsrcid=1348212)
     #
     Optional:
+      abundance: =ABUNDANCE
       basemaps:
       commonname:
       coverage: Global
