--- a/workflow/mol-data/bulkload.yaml
+++ b/workflow/mol-data/bulkload.yaml
@@ -23,15 +23,15 @@ transformers:
 
     - property: source
       external_name: layer_source
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: collection
       external_name: layer_collection
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: filename
       external_name: layer_filename
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: json
       external_name: layer_polygons
@@ -56,89 +56,89 @@ transformers:
 
     - property: accessrights
       external_name: accessrights
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: bibliographiccitation
       external_name: bibliographiccitation
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: breedingdomain
       external_name: breedingdomain
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: contact
       external_name: contact
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: coverage
       external_name: coverage
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: date
       external_name: date
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: email
       external_name: email
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: eventdate
       external_name: eventdate
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: nonbreedingdomain
       external_name: nonbreedingdomain
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: presencedefault
       external_name: presencedefault
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: samplingprotocol
       external_name: samplingprotocol
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: scientificname
       external_name: scientificname
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: source
       external_name: source
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: verbatimsrs
       external_name: verbatimsrs
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     # Optional source fields
 
     - property: accessright
       external_name: accessright
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: contributor
       external_name: contributor
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: format
       external_name: format
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: identifier
       external_name: identifier
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: rights
       external_name: rights
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: surveyintervals
       external_name: surveyintervals
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
     - property: type
       external_name: type
-      import_transform: transform.none_if_empty(str)
+      import_transform: transform.none_if_empty(unicode)
 
   post_import_function: bulkload_helper.add_polygon
 
