--- a/workflow/mol-data/iucn/config.yaml
+++ b/workflow/mol-data/iucn/config.yaml
@@ -33,9 +33,10 @@ Collections:
       creator: =COMPILER
       layertype: "expert opinion range map"
       pubdate: "2011"
-      rights: "Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
+      rights: "Creative Commons® Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
+      rights: "Creative Commons® Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
       scientificname: =BINOMIAL
-      title: "IUCN Red List of Threatened Species"
+      title: "IUCN Red List™ of Threatened Species"
       verbatimsrs: "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs"
 
     # Optional MoL DBF fields
@@ -73,14 +74,14 @@ Collections:
       identifier: =ID_NO
       bibliographiccitation: "IUCN 2009. IUCN Red List of Threatened Species. Version 2009.1. http://www.iucnredlist.org"
         # What about =CITATION?
-      collectionidentifier: "IUCN Red List version AAAA" 
+      collectionidentifier: "IUCN Red List™ version AAAA" 
       contact: "Vineet Katariya <Vineet.Katariya@iucn.org>"
       creator: =COMPILER
       layertype: "expert opinion range map"
       pubdate: "2011"
       rights: "Creative Commons Attribution-Share Alike 3.0 Unported license. http://creativecommons.org/licenses/by-sa/3.0/deed.en"
       scientificname: =BINOMIAL
-      title: "IUCN Red List of Threatened Species"
+      title: "IUCN Red List™ of Threatened Species"
       verbatimsrs: "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +a=6378137 +b=6378137 +units=m +no_defs"
 
     # Optional MoL DBF fields
@@ -92,7 +93,7 @@ Collections:
       coverage: Global
       description: |
           This dataset contains distribution information of species assessed for 
-          The IUCN Red List of Threatened Species. The maps are developed as part 
+          The IUCN Red List™ of Threatened Species. The maps are developed as part 
           of a comprehensive assessment of global in order to highlight taxa 
           threatened with extinction, and thereby promote their conservation.
       distributioncomment: =DIST_COMM     
